# CollisionSimulator

./: .gitignore  CMakeLists.txt  README.md
src/: MyCollisionBall.h  MyGraphicsScene.h  MyGraphicsView.h  StartWidget.cpp  StartWidget.h  main.cpp
